--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.url=jdbc:mysql://localhost:3306/integrador3_2?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/integrador3?createDatabaseIfNotExist=true
 
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
